<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:autofit="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#212121"
                tools:context="net.cryptodirect.authenticator.LinkAccountDataFragment">

    <me.grantland.widget.AutofitTextView
        android:id="@+id/verify_blurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/account_label_edittext"
        android:layout_alignLeft="@+id/account_label_edittext"
        android:layout_alignRight="@+id/account_label_edittext"
        android:layout_alignStart="@+id/account_label_edittext"
        android:layout_marginTop="18dp"
        android:maxLines="2"
        android:text="@string/register_account_data_blurb"
        android:textColor="#f2f2f2"
        android:textSize="18sp"
        autofit:minTextSize="16sp"/>

    <TextView
        android:id="@+id/account_provider_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/verify_blurb"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/provider"
        android:textColor="#f2f2f2"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/account_provider_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_provider_label"
        android:layout_alignStart="@+id/account_provider_label"
        android:layout_below="@+id/account_provider_label"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#f4f4f4"
        android:clickable="false"
        android:ems="16"
        android:enabled="false"
        android:inputType="none"
        android:maxLines="2"
        android:maxWidth="320dp"
        android:minWidth="120dp"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="#212121"
        android:textSize="20sp"
        android:drawablePadding="15dp"
        tools:ignore="TextFields"/>

    <TextView
        android:id="@+id/account_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/account_provider_edittext"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/label"
        android:textColor="#f2f2f2"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/account_label_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_label_textview"
        android:layout_alignStart="@+id/account_label_textview"
        android:layout_below="@+id/account_label_textview"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#f4f4f4"
        android:clickable="false"
        android:ems="16"
        android:enabled="false"
        android:inputType="none"
        android:maxLines="2"
        android:maxWidth="320dp"
        android:minWidth="120dp"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="#212121"
        android:textSize="20sp"
        tools:ignore="TextFields"/>

    <TextView
        android:id="@+id/key_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_label_edittext"
        android:layout_alignStart="@+id/account_label_edittext"
        android:layout_below="@+id/account_label_edittext"
        android:layout_marginTop="31dp"
        android:text="@string/key"
        android:textColor="#f2f2f2"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/key_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/account_label_edittext"
        android:layout_alignLeft="@+id/key_textview"
        android:layout_alignRight="@+id/account_label_edittext"
        android:layout_alignStart="@+id/key_textview"
        android:layout_below="@+id/key_textview"
        android:layout_marginTop="22dp"
        android:background="#f4f4f4"
        android:clickable="false"
        android:elegantTextHeight="true"
        android:enabled="false"
        android:inputType="none"
        android:maxWidth="320dp"
        android:minLines="2"
        android:minWidth="120dp"
        android:paddingBottom="2dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="#212121"
        android:textSize="20sp"
        android:typeface="monospace"/>

    <CheckBox
        android:id="@+id/set_as_default_account_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key_edit_text"
        android:layout_alignStart="@+id/key_edit_text"
        android:layout_below="@+id/key_edit_text"
        android:layout_marginTop="30dp"
        android:checked="true"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp"
        android:text="@string/set_as_default"
        android:textColor="#ffffff"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/incorrect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key_edit_text"
        android:layout_alignStart="@+id/key_edit_text"
        android:layout_below="@+id/set_as_default_account_box"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/key_textview"
        android:layout_toRightOf="@+id/key_textview"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:drawableLeft="@drawable/ic_close_white_24dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_close_white_24dp"
        android:drawableTint="@color/md_red_300"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        android:onClick="handleIncorrectButtonClicked"
        android:padding="22dp"
        android:text="@string/information_incorrect"
        android:textColor="#f3f3f3"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/correct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/key_edit_text"
        android:layout_alignRight="@+id/key_edit_text"
        android:layout_alignTop="@+id/incorrect_button"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:drawableLeft="@drawable/ic_check_white_24dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_check_white_24dp"
        android:drawableTint="@color/md_green_300"
        android:lines="1"
        android:maxLines="1"
        android:onClick="handleCorrectButtonClicked"
        android:padding="22dp"
        android:text="@string/information_correct"
        android:textColor="#f3f3f3"
        android:textSize="12sp"/>

</RelativeLayout>
