...
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <Button
                android:id="@+id/scan_qr_code_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_qrcode_white_36dp"
...
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <Button
                android:id="@+id/manual_entry_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/dialog_holo_dark_frame"
...
