...
        android:layout_marginStart="21dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/code_box"
        android:focusable="false"
        android:textSize="34sp"
        android:textColor="#fafafa"
        android:editable="false"
        android:layout_marginTop="21dp"
        android:background="#424242"
...
