<resources>
    <string name="app_name">Cryptodash Authenticator</string>
    <!-- Action Bar Menu -->
    <string name="select_account">Accounts</string>
    <string name="register_new_account">Link Account</string>
    <string name="test_device">Test Device</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="begin_tests">Begin Tests</string>
    <string name="welcome_blurb">Welcome to Cryptodash Authenticator. To get started right away, tap the “Link Account” button.
...
